src/tui/tests/snapshots/bmm__tui__tests__search__empty_search_results_show_a_message.snap
---
source: src/tui/tests/search.rs
expression: terminal.backend()
---
"                                                                                                "
"   no bookmarks                                                                                 "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
" bmm  no bookmarks found for query                                                              "
