src/tui/tests/snapshots/bmm__tui__tests__search__failed_search_preserves_existing_results_and_shows_an_error.snap
---
source: src/tui/tests/search.rs
expression: terminal.backend()
---
"                                                                                                                        "
"   bookmarks  (2)                                                                                                       "
"                                                                                                                        "
"> https://www.rust-lang.org/                                                                                            "
"  https://doc.rust-lang.org/book/                                                                                       "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"┌ details ─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                                      │"
"│ URI   : https://www.rust-lang.org/                                                                                   │"
"│ Title : Rust                                                                                                         │"
"│ Tags  : rust,programming                                                                                             │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" bmm  couldn't execute query (search bookmarks): encountered unexpected or invalid data: database unavailable           "
