src/tui/tests/snapshots/bmm__tui__tests__search__moving_to_the_next_search_result_updates_the_selection.snap
---
source: src/tui/tests/search.rs
expression: terminal.backend()
---
"                                                                                                "
"   bookmarks  (2)                                                                               "
"                                                                                                "
"  https://www.rust-lang.org/                                                                    "
"> https://doc.rust-lang.org/book/                                                               "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"┌ details ─────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                              │"
"│ URI   : https://doc.rust-lang.org/book/                                                      │"
"│ Title : The Rust Programming Language                                                        │"
"│ Tags  : rust,book                                                                            │"
"│                                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────┘"
" bmm                                                                                            "
