src/tui/tests/snapshots/bmm__tui__tests__search__submitting_a_search_displays_matching_bookmarks.snap
---
source: src/tui/tests/search.rs
expression: terminal.backend()
---
"                                                                                                "
"   bookmarks  (2)                                                                               "
"                                                                                                "
"> https://www.rust-lang.org/                                                                    "
"  https://doc.rust-lang.org/book/                                                               "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"┌ details ─────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                              │"
"│ URI   : https://www.rust-lang.org/                                                           │"
"│ Title : Rust                                                                                 │"
"│ Tags  : rust,programming                                                                     │"
"│                                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────┘"
" bmm                                                                                            "
